--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -14,21 +15,22 @@
         android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidSMSServer">
-        <!--
-         see https://stackoverflow.com/a/51963216/9193164 for launchMode="singleTask"
-         app work fine while debugging but when an apk is generated app recreates activity when back button is pressed
-         -->
+
+        <service
+            android:name=".services.SMSService"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity
             android:name=".activities.MainActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-     </application>
+    </application>
 
 </manifest>
