--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,13 +5,11 @@ on:
     branches: [ "stratdev3-build" ]
   pull_request:
     branches: [ "stratdev3-build" ]
-  workflow_dispatch:
 
 jobs:
-  build:
-
+  apk:
+    name: Generate APK
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: set up JDK 11
@@ -20,7 +18,25 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build APK
+      run: bash ./gradlew assembleDebug --stacktrace
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: AndroidSMSServer.apk
+        path: app/build/outputs/apk/**/*.apk
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
